# wormhole-file-share

./: .gitignore  README.md  docker-compose.yml
.github/workflows/: ci.yml  release.yml
autoscaler/: Cargo.toml  Dockerfile
autoscaler/src/: config.rs  ec2.rs  main.rs  metrics.rs  nginx.rs
backend/: .env.example  Cargo.toml  Dockerfile
backend/src/: config.rs  error.rs  handlers.rs  main.rs  state.rs  store.rs
frontend/: index.html  live_test.mjs  package-lock.json  package.json
frontend/public/docs/: index.html
frontend/src/: App.jsx  Burst.jsx  Receive.jsx  Send.jsx  Stats.jsx  api.js  crypto.js  crypto.test.js  styles.css  wordlist.js
