[package]
name = "wormhole-autoscaler"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }

aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-ec2 = "1"

serde = { version = "1", features = ["derive"] }

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
